add bg & resize points

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Stopwatch</title>
 	<meta charet="utf-8">
-	<link rel="shortcut icon" href="icon.ico" />
+	<link rel="shortcut icon" href="images/icon.ico" />
 	<link rel="stylesheet" href="styles/style.css">
 	<link rel="stylesheet" href="styles/foundation.min">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
