--- a/index.html
+++ b/index.html
@@ -7,33 +7,40 @@
 	<link rel="stylesheet" href="styles/style.css">
 	<link rel="stylesheet" href="styles/foundation.min">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <script src="scripts/jquery-2.1.4.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
 <body>
-	<div class="row">
-			<form name="time">
-				<input type="text" name="wh" class="work" value="0" readonly>
-				<input type="text" name="wm" class="work" value="0" readonly>
-				<input type="text" name="ws" class="work" value="0" readonly>
-				<br>
-				<input type="text" name="rh" class="rest" value="0" readonly>
-				<input type="text" name="rm" class="rest" value="0" readonly>
-				<input type="text" name="rs" class="rest" value="0" readonly>
-			</form>
+	<div class="row td-list">
+		<input type="text" class="td-item">
+		<ul></ul>
 	</div>
-
-	<div class="row">
-		<div class="">
-			<button onclick="start()" class="start">start</button>
-			<button onclick="pause()" class="pause">pause</button>
-			<button onclick="window.location.reload(); saveTextAsFile()" class="reset">reset</button>
+	<div class="content">
+		<div class="row">
+				<form name="time">
+					<input type="text" name="wh" class="work" value="0" readonly>
+					<input type="text" name="wm" class="work" value="0" readonly>
+					<input type="text" name="ws" class="work" value="0" readonly>
+					<br>
+					<input type="text" name="rh" class="rest" value="0" readonly>
+					<input type="text" name="rm" class="rest" value="0" readonly>
+					<input type="text" name="rs" class="rest" value="0" readonly>
+				</form>
 		</div>
-	</div>
 
-	<div class="row">
-		<form name="backlog">
-			<textarea type="text" id="backlog" name="backlog" class="backlog" readonly></textarea>
-		</form>
+		<div class="row">
+			<div class="">
+				<button onclick="start()" class="start">start</button>
+				<button onclick="pause()" class="pause">pause</button>
+				<button onclick="window.location.reload(); saveTextAsFile()" class="reset">reset</button>
+			</div>
+		</div>
+
+		<div class="row">
+			<form name="backlog">
+				<textarea type="text" id="backlog" name="backlog" class="backlog" readonly></textarea>
+			</form>
+		</div>
 	</div>
 </body>
 </html>
