--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="row td-list">
-		<input type="text" class="td-item">
+		<input type="text" class="td-item" placeholder="new task">
 		<ul></ul>
 	</div>
 	<div class="content">
