add sortable & change colors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="styles/foundation.min">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <script src="scripts/jquery-2.1.4.js"></script>
+    <script src="scripts/jquery-ui.js"></script>
     <script src="scripts/script.js"></script>
 </head>
 <body>
